# EmbyPilotBot

./: .gitignore  Cargo.toml  README.md
src/: domain.rs  lib.rs
src/api/: emby_api.rs  mod.rs  photo_message.rs  telegram_api.rs  text_message.rs
src/client/: mod.rs  telegram_client.rs
src/config/: emby.rs  mod.rs  telegram.rs
src/network/: curl_plugin.rs  extension.rs  provider.rs
