[package]
name = "embypilotbot"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "GPL-3.0-or-later"
rust-version = "1.85"
authors = ["Open-PiliPili <openpilipili@gmail.com>"]
description = "A Rust-powered Telegram bot for users to request media sources directly to Emby."

[dependencies]
anyhow = "1.0.97"
once_cell = "1.21.2"
reqwest = { version = "0.12.15", default-features = false, features = [
    "gzip",
    "http2",
    "json",
    "multipart",
    "rustls-tls",
    "rustls-tls-native-roots",
    "stream"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_regex = "1.1.0"
time = { version = "0.3.39", features = ["macros", "local-offset"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json"
] }
tempfile = "3.19.1"
regex = "1.11.1"